--- a/praktika2/pubspec.yaml
+++ b/praktika2/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   #Библиотека для шифрования данных
   crypto: ^3.0.2
   path_provider: ^2.0.11
+  dartz: ^0.10.1
 
 dev_dependencies:
   flutter_test:
